[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Styles/student_style.tres" type="StyleBox" id=1]
[ext_resource path="res://Scripts/Editor/Student.gd" type="Script" id=2]

[node name="Student" type="Control"]
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StudentButton" type="Button" parent="."]
margin_right = 64.0
margin_bottom = 64.0
custom_styles/normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StudentButton"]
margin_right = 64.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.478431, 0.396078, 0.266667, 1 )
text = "Student"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="StudentButton" to="." method="_on_StudentButton_mouse_entered"]
[connection signal="mouse_exited" from="StudentButton" to="." method="_on_StudentButton_mouse_exited"]
